--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@react-pdf/renderer": "^3.1.6",
     "next": "latest",
     "react": "18.2.0",
     "react-dom": "18.2.0"
